
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edtech-learning-path-recommender"
version = "0.1.0"
description = "Recommend next-best lessons from learner history, pace, and mastery signals."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
